# auto-insurance-fraud-prediction

./: Auto_Car_Insurance_fraud_claim_Detection.ipynb  auto_car_insurance_fraud_claim_detection.py  insurace_fraud_model_SVC_Ignaz.pkl  pyproject.toml  test.py
